param the network port collectd publishes to

--- a/templates/etc/collectd.conf.j2
+++ b/templates/etc/collectd.conf.j2
@@ -752,7 +752,7 @@ LoadPlugin users
 
 <Plugin network>
 #	# client setup:
-	Server "{{ansible_default_ipv4['address']}}" "25826"
+	Server "{{ansible_default_ipv4['address']}}" "{{collectd_network_port}}"
 #	<Server "239.192.74.66" "25826">
 #		SecurityLevel Encrypt
 #		Username "user"
